apps/lite/ui/src/routes/project-shared.module.css
.lanes {
	display: flex;
	column-gap: 8px;
	flex-grow: 1;
}

.pageWithPreview {
	flex-grow: 1;
}

.primaryPane {
	display: flex;
	flex-direction: column;
	min-height: 100%;
	padding: var(--pane-padding);
}

.previewPane {
	padding: var(--pane-padding);
}

.previewDialogPopup {
	position: fixed;
	inset: 0;
	padding: var(--pane-padding);
	overflow: auto;
	background-color: white;
}

.previewResizeHandle {
	width: 1px;
	background-color: black;
}

.commitsLane {
	flex-shrink: 0;
	width: 350px;
}

.laneDiffColumn {
	width: 500px;
}

.commit {
	display: flex;
	position: relative;
	flex-direction: column;
}

.commitRow {
	display: flex;
	align-items: baseline;
}

.commitDetails {
	padding-left: 8px;
}

.commitButton {
	flex-grow: 1;
}

.fileRow {
	display: flex;
}

.fileButton {
	flex-grow: 1;
}

.selected {
	background-color: black;
	color: white;
}

.selectedWithin {
	background-color: lightgray;
}

.highlighted {
	background-color: yellow;
	color: black;
}

.hunkHeaderRow {
	display: flex;
	column-gap: 4px;
	align-items: center;
}

.hunkHeader {
	flex-grow: 1;
	font-family: monospace;
	cursor: grab;
}

.dragPreview {
	padding: 4px 8px;
	border: 1px solid;
	background-color: white;
}

.dragging {
	opacity: 0.4;
}

.editCommitMessageInput {
	flex-grow: 1;
	field-sizing: content;
	box-sizing: content-box;
	min-height: calc(2lh);
}

.menuPopup {
	border: 1px solid;
	background-color: white;
}

.menuItem {
	padding: 4px;
	border: 1px solid;
	cursor: default;

	&[data-disabled] {
		opacity: 0.5;
	}
}

